--- a/style.css
+++ b/style.css
@@ -1,4 +1,48 @@
+* {
+    font-family: 'Inter', sans-serif;
+}
+
 header {
     background-color: rgb(41, 49, 59);
     color: #fff;
+}
+
+.logoDiv a {
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+header img {
+    height: 50px;
+    padding: 5px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+header span,
+header a {
+    color: #fff;
+}
+
+header a {
+    text-decoration: none;
+}
+
+header ul {
+    list-style-type: none;
+}
+
+header ul li {
+    display: inline;
+    padding-right: 10px;
 }
